<resources>
    <string name="app_name">Geo Quiz</string>

    <!-- MainActivity -->
    <string name="start">Start</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <!-- SignInActivity -->
    <string name="email">Email</string>
    <string name="email_hint">user@email.com</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="create_account"><u>Create account?</u></string>
    <string name="sign_in_success">Welcome!</string>
    <string name="sign_in_fail">Email or password is incorrect</string>
    <string name="user_exist_error">Email is already in use.\nPlease use a different email.</string>
    <string name="network_error">Could not connect to network.\nPlease check your internet
        connection.</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_error">Please fill this field</string>
    <string name="language_mode">العربية</string>
    <string name="email_not_verified">Please check verification email sent to you before signing in for the first
        time.</string>
    <string name="internet_not_connected">Please check your internet connection and try
        again</string>
    <string name="retry">Retry</string>

    <!-- ResetPassword -->
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done!</string>
    <string name="check_your_email">Check your email to reset your password</string>
    <string name="no_account_with_email">No account found with this email</string>
    <string name="failed_to_send">Failed to Send</string>

    <!-- SignUpActivity -->
    <string name="username">Username</string>
    <string name="sign_up_success">Account created successfully!</string>
    <string name="sign_up_fail">Failed to create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="password_length_error">Must be at least %d characters</string>
    <string name="password_criteria">Minimum %d characters</string>
    <string name="already_have_account"><u>Already have an account? Sign in</u></string>
    <string name="email_verification"><u>Verification email has been sent.</u></string>
    <string name="email_verification_fail"><u>Failed to send verification email.</u></string>

    <!-- CategoriesActivity -->
    <string name="flags">Flags</string>
    <string name="capitals">Capital Cities</string>
    <string name="maps">Maps</string>
    <string name="flags_instruction">Choose the correct country that belongs to the shown flag.</string>
    <string name="maps_instruction">Choose the correct country that belongs to the shown map.</string>
    <string name="capitals_instruction">Choose the correct country that belongs to the shown
        city.</string>

    <!-- LoadingActivity -->
    <string name="loading">Loading...</string>

    <!-- GameActivity -->
    <string name="exit">Exit</string>
    <string name="hint_text">Located in %s</string>
    <string name="paused">Paused</string>

    <!-- ResultActivity -->
    <string name="correct_answers">Correct Answers:</string>
    <string name="points">points</string>
    <string name="total_score">Total Score</string>
    <string name="high_score">High Score</string>

    <!-- LeaderBoardActivity -->
    <string name="level_without_star">Level %s</string>
    <string name="top_ranking">Top %d</string>

    <!-- ProfileActivity -->
    <string name="level">★ Level %s</string>
    <string name="next_level">+%s points to Level %s</string>
    <string name="new_username">New Username</string>
    <string name="new_username_hint">Enter your new username</string>
    <string name="delete_image_message">Delete your profile picture?</string>

    <!-- SettingsActivity -->
    <string name="sound_effects">Sound Effects</string>
    <string name="music">Music</string>
    <string name="account_info">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>

    <!-- Update Password Preference -->
    <string name="update_password_key" translatable="false">update_password_key</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="current_password_incorrect">Current password is incorrect</string>
    <string name="update_password_success">Password updated successfully!</string>

    <!-- Update Email Preference -->
    <string name="update_email_key" translatable="false">update_email_key</string>
    <string name="update_email">Update Email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="update_email_success">Email updated successfully!</string>
    <string name="password_incorrect">Password is incorrect</string>

    <!-- Sign Out Preference -->
    <string name="sign_out_key" translatable="false">sign_out_key</string>

    <!-- Delete Account Preference -->
    <string name="delete_account_key" translatable="false">delete_account_key</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="delete_account_success">Your account has been deleted successfully!</string>
    <string name="enter_password_to_delete">Please enter your password</string>

    <!-- Preferences Preference -->
    <string name="language_key" translatable="false">language_key</string>
    <string name="language">Language</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>

    <!-- Music Preference -->
    <string name="music_key" translatable="false">music_key</string>

    <!-- Sound Effects Preference -->
    <string name="sound_effects_key" translatable="false">sound_effects_key</string>

    <!-- Credits Preference -->
    <string name="credits_key" translatable="false">credits_key</string>
    <string name="credits">Credits</string>

    <!-- Dark Mode Preference -->
    <string name="dark_mode_key" translatable="false">dark_mode_key</string>
    <string name="dark_mode">Dark Mode</string>

</resources>