<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="SECTION1">
        <Preference
            app:key="update_password"
            app:fragment="com.example.geo_app.UpdatePasswordFragment"
            app:title="@string/update_password"
            app:icon="@drawable/ic_password"/>

        <Preference
            app:key="update_email"
            app:fragment="com.example.geo_app.UpdateEmailFragment"
            app:title="@string/update_email"
            app:icon="@drawable/ic_email"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="SECTION2">
        <ListPreference
            app:key="@string/language_key"
            app:title="@string/language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="en"
            app:icon="@drawable/ic_language"/>
        <SwitchPreferenceCompat
            app:key="music"
            app:title="@string/music"
            app:icon="@drawable/ic_music"/>
        <SwitchPreferenceCompat
            app:key="sound_effects"
            app:title="@string/sound_effects"
            app:icon="@drawable/ic_sound_effects"/>
        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode"
            app:icon="@drawable/ic_dark_mode"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="SECTION4">
        <Preference
            app:key="delete_account"
            app:title="@string/delete_account"
            app:fragment="com.example.geo_app.DeleteAccountFragment"
            app:icon="@drawable/ic_delete" />
        <Preference
            app:key="sign_out"
            app:title="@string/sign_out"
            app:icon="@drawable/ic_sign_out" />
    </PreferenceCategory>

</PreferenceScreen>