<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:background="@color/background_grey">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_125sdp"
        app:srcCompat="@drawable/logo"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/email_tv"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline">
        <EditText
            android:id="@+id/email_et"
            android:hint="@string/email_hint"
            android:textAlignment="viewStart"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_tv"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline">
        <EditText
            android:id="@+id/password_et"
            android:hint="@string/password"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_tv"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="forgotPassword"/>

    <TextView
        android:id="@+id/sign_up_tv"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"/>

    <Button
        android:id="@+id/sign_in_btn"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signInWithEmail"
        style="@style/Button"/>

    <TextView
        android:id="@+id/or_tv"
        android:text="@string/or"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/google_sign_in_btn"
        android:text="@string/sign_in_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signInWithGoogle"
        style="@style/Button"/>

    <TextView
        android:id="@+id/language_tv"
        android:gravity="center"
        android:text="@string/language_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setLanguage"
        android:drawableStart="@drawable/language_ic"/>

</LinearLayout>