<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/email_tv"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email_et"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/username_tv"
        android:text="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username_et"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/password_tv"
        android:text="@string/password_criteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password_et"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_btn"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerWithEmail"/>

    <TextView
        android:id="@+id/or_tv"
        android:text="@string/or"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/google_register_btn"
        android:text="@string/register_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerWithGoogle"/>

    <Button
        android:id="@+id/sign_out_btn"
        android:text="SIGN OUT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signOut"/>

</LinearLayout>