<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/email_tv"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelForEditText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp">
        <EditText
            android:id="@+id/email_et"
            android:hint="@string/email_hint"
            android:textAlignment="viewStart"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/username_tv"
        android:text="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelForEditText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp">
        <EditText
            android:id="@+id/username_et"
            android:hint="@string/username"
            android:textAlignment="viewStart"
            android:inputType="text"
            android:autofillHints="username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_tv"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelForEditText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp">
        <EditText
            android:id="@+id/password_et"
            android:hint="@string/password_criteria"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUpWithEmail"
        style="@style/Button"/>

    <Button
        android:id="@+id/google_register_btn"
        android:text="@string/sign_up_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUpWithGoogle"
        style="@style/Button"/>

    <TextView
        android:id="@+id/language_tv"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/language_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setLanguage"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:drawableEndCompat="@drawable/language_icon"
        style="@style/LabelForEditText"/>

    </LinearLayout>

</ScrollView>