<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateEmailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_email_tv"
                android:text="@string/current_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelText"
                android:layout_marginTop="@dimen/_30sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout"
                android:enabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_email_et"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/new_email_tv"
                android:text="@string/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_email_et"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_tv"
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple"
                style="@style/TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_email_btn"
                android:text="@string/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Button"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>