<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdatePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_password_tv"
                android:text="@string/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                style="@style/LabelText"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorOnPrimary"
                style="@style/TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_et"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/new_password_tv"
                android:text="@string/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelText"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorOnPrimary"
                style="@style/TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_et"
                    android:hint="@string/password_criteria"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_password_btn"
                android:text="@string/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Button"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>